[package]
name = "DNSlite"
version = "0.0.0"
authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
license = "MIT/Apache-2.0"
description = "DNSlite is a Rust library for working with the DNS protocol."
repository = "https://github.com/cmbrandenburg/dnslite"
keywords = ["dns"]

[dependencies]
byteorder = "1.1"

[dev-dependencies]
assert_matches = "1.1"

[lib]
name = "dnslite"
path = "src/lib.rs"
